--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "ext-intl": "*",
         "yiisoft/yii2": "~2.0.17",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.1.0"
+        "yiisoft/yii2-swiftmailer": "~2.1.0",
+        "creocoder/yii2-flysystem": "^0.9.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
